# SMSA-Ai-Assistant

./: .dockerignore  .gitignore  Dockerfile.ai-engine  Dockerfile.gateway  Dockerfile.web  README.md  STREAMING_IMPLEMENTATION.md  docker-compose.yml  package-lock.json  package.json
apps/ai-engine/: pyproject.toml
apps/ai-engine/src/: logging_config.py  main.py
apps/ai-engine/src/agents/: base.py  faq.py  rates.py  retail.py  tracking.py
apps/ai-engine/src/config/: settings.py
apps/ai-engine/src/models/: rates.py  tracking.py
apps/ai-engine/src/orchestrator/: graph.py  intent_classifier.py  router.py  state.py
apps/ai-engine/src/prompts/: rates_agent_prompt.txt  retail_centers_agent_prompt.txt  tracking_agent_prompt.txt
apps/ai-engine/src/services/: db.py  deepseek_intent.py  faq_data.py  llm_client.py  response_generator.py  smsa_apis.py  storage.py  vision_client.py
apps/ai-engine/src/smsa_ai_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/ai-engine/tests/: test_mongodb_connection.py  test_tracking_agent.py
apps/gateway/: package.json
apps/gateway/src/: index.ts  logger.ts
apps/gateway/src/routes/: chat.ts  upload.ts
apps/gateway/src/services/: aiEngineService.ts
apps/gateway/tests/: chat-route.test.ts
apps/web/: package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/tests/: page.test.tsx
data_for_faq/: smsa_chunks.jsonl
docs/: tracking-agent.md
